bk_ida/gccida/g0/noce_emit_cmove
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_emit_cmove/src/ifcvt.c:1348:61: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  noce_emit_cmove(  struct noce_if_info *if_info, rtx x, rtx_code code, rtx cmp_a, rtx cmp_b, rtx vfalse, rtx vtrue) 
                                                            ^
                                                            enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_emit_cmove/src/ifcvt.c:1360:30: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_fmt_ee( code, ( machine_mode)*( ( unsigned __int8 *)if_info->cond + 2), cmp_a, cmp_b); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_emit_cmove/src/ifcvt.c:1361:39: error: use of undeclared identifier 'machine_mode'
v8 = gen_rtx_fmt_eee( IF_THEN_ELSE, ( machine_mode)*( ( unsigned __int8 *)x + 2), v7, vtrue, vfalse); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_emit_cmove/src/ifcvt.c:1378:33: error: use of undeclared identifier 'machine_mode'
if ( !general_operand( cmp_a, ( machine_mode)*( ( unsigned __int8 *)cmp_a + 2)) 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_emit_cmove/src/ifcvt.c:1379:31: error: use of undeclared identifier 'machine_mode'
|| !general_operand( cmp_b, ( machine_mode)*( ( unsigned __int8 *)cmp_b + 2)) ) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_emit_cmove/src/ifcvt.c:1392:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_emit_cmove/src/obj/ifcvt.o] Error 1
